--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com" data-cfasync="false"></script>
     <script data-cfasync="false">
         tailwind.config = {
-            darkMode: 'class', // 显式通过 class 控制
+            darkMode: 'class',
         }
     </script>
     <script src="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/Chart.js/3.7.1/chart.min.js"></script>
@@ -29,15 +29,28 @@
 <div class="container mx-auto p-4">
     <!-- 深色模式切换按钮 -->
     <div class="flex justify-end mb-4">
-        <button id="toggleDark" class="flex items-center gap-1 px-3 py-2 rounded bg-gray-200 dark:bg-gray-700 dark:text-white relative" title="切换到浅色模式">
+        <button id="toggleDark"
+                class="flex items-center gap-1 px-3 py-2 rounded bg-gray-200 dark:bg-gray-700 dark:text-white relative"
+                title="切换到浅色模式">
             <span id="themeIcon">☀</span>
         </button>
-
     </div>
 
     <div class="w-full max-w-6xl mx-auto h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px]">
         <h1 class="text-2xl font-bold mb-4">大时代景气指数(NGA:706)</h1>
         <div class="flex flex-wrap items-center gap-4 mb-4">
+            <div>
+                <label for="indicatorSelect"
+                       class="block text-sm font-bold mb-2 text-gray-700 dark:text-gray-300">选择指标:</label>
+                <select id="indicatorSelect"
+                        class="shadow border rounded py-2 px-3 bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-200 focus:outline-none focus:shadow-outline">
+                    <option value="">环比</option>
+                    <option value="ma5">MA5</option>
+                    <option value="ma10">MA10</option>
+                    <!--                    <option value="boll">BOLL</option>-->
+                    <!--                    <option value="macd">MACD</option>-->
+                </select>
+            </div>
             <div>
                 <label for="rangeSelect"
                        class="block text-sm font-bold mb-2 text-gray-700 dark:text-gray-300">快速选择:</label>
@@ -79,11 +92,10 @@
             </div>
             <div>
                 <label for="compareOffset"
-                       class="block text-sm font-bold mb-2 text-gray-700 dark:text-gray-300">对比偏移:</label>
+                       class="block text-sm font-bold mb-2 text-gray-700 dark:text-gray-300">环比偏移:</label>
                 <div class="flex gap-2">
                     <input type="number" id="compareOffset" value="0" min="0"
-                           class="shadow border rounded py-2 px-3 bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-200 focus:outline-none focus:shadow-outline w-24"
-                           placeholder="0 表示不对比">
+                           class="shadow border rounded py-2 px-3 bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-200 focus:outline-none focus:shadow-outline w-24">
                     <select id="compareUnit"
                             class="shadow border rounded py-2 px-2 bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-200 focus:outline-none focus:shadow-outline">
                         <option value="hours">小时</option>
@@ -111,8 +123,8 @@
     // 切换函数
     function updateThemeIcon(isDark) {
         themeIcon.textContent = isDark ? '🌙' : '☀';
-        themeIcon.title = isDark? '切换到浅色模式' : '切换到深色模式';
-        toggleBtn.title = isDark? '切换到浅色模式' : '切换到深色模式';
+        themeIcon.title = isDark ? '切换到浅色模式' : '切换到深色模式';
+        toggleBtn.title = isDark ? '切换到浅色模式' : '切换到深色模式';
     }
 
     toggleBtn.addEventListener('click', () => {
@@ -160,13 +172,16 @@
         return moment.utc(utcTimestamp).local().format('YYYY-MM-DD HH:mm');
     }
 
-    function fetchData(startDateUTC, endDateUTC, timeInterval) {
+    function fetchData(startDateUTC, endDateUTC, timeInterval, indicator) { // 修改 fetchData 函数，添加 indicator 参数
         // Add validation for parameters
         if (!startDateUTC || !endDateUTC || !timeInterval) {
             return Promise.reject(new Error("无效的查询参数"));
         }
-        const url = `https://nga_grep.yikakia.com/api/timeseries?startDate=${startDateUTC}&endDate=${endDateUTC}&timeInterval=${timeInterval}`;
-        // const url = `http://localhost:11648/api/timeseries?startDate=${startDateUTC}&endDate=${endDateUTC}&timeInterval=${timeInterval}`;
+        // let url = `http://localhost:11648/api/timeseries?startDate=${startDateUTC}&endDate=${endDateUTC}&timeInterval=${timeInterval}`;
+        let url = `https://nga_grep.yikakia.com/api/timeseries?startDate=${startDateUTC}&endDate=${endDateUTC}&timeInterval=${timeInterval}`;
+        if (indicator) { // 如果选择了指标，则添加到 URL 中
+            url += `&indicator=${indicator}`;
+        }
         console.log("Fetching data from:", url); // Log URL for debugging
         return fetch(url).then(res => {
             if (!res.ok) throw new Error(`HTTP error! status: ${res.status}`);
@@ -194,7 +209,7 @@
                     y: {
                         title: {
                             display: true,
-                            text: '发帖数'
+                            text: '数值' // 修改 Y 轴标题为 '数值'，因为可能包含指标
                         },
                         beginAtZero: true // Often useful for counts
                     }
@@ -225,6 +240,8 @@
         const rangeSelect = document.getElementById('rangeSelect');
         const compareOffsetInput = document.getElementById('compareOffset');
         const compareUnitSelect = document.getElementById('compareUnit');
+        const indicatorSelect = document.getElementById('indicatorSelect');
+
 
         function setDateRange(range) {
             const now = moment();
@@ -264,6 +281,16 @@
             fetchDataButton.click();
         });
 
+        // 监听技术指标
+        indicatorSelect.addEventListener('change', () => {
+            const value = indicatorSelect.value;
+            const disableCompare = value !== "";
+            compareOffsetInput.disabled = disableCompare;
+            compareUnitSelect.disabled = disableCompare;
+            // 当指标选择改变时，自动触发查询
+            fetchDataButton.click();
+        });
+
         // --- 事件监听器：点击查询按钮 ---
         fetchDataButton.addEventListener('click', () => {
             const startDateLocal = startDateInput.value;
@@ -271,6 +298,7 @@
             const timeInterval = timeIntervalSelect.value;
             const compareOffset = parseInt(compareOffsetInput.value) || 0;
             const compareUnit = compareUnitSelect.value; // Use correct variable name
+            const selectedIndicator = indicatorSelect.value; // 获取选中的指标
 
             const startDateUTC = toUTC(startDateLocal);
             const endDateUTC = toUTC(endDateLocal);
@@ -288,7 +316,7 @@
             // 计算对比时间范围 (确保是 UTC)
             let startCompareUTC = null;
             let endCompareUTC = null;
-            if (compareOffset > 0) {
+            if (compareOffset > 0 && !selectedIndicator) { // 只有在没有选择指标时才进行对比偏移
                 const startMomentUTC = moment.utc(startDateUTC);
                 const endMomentUTC = moment.utc(endDateUTC);
                 if (startMomentUTC.isValid() && endMomentUTC.isValid()) {
@@ -307,10 +335,10 @@
 
 
             Promise.all([
-                fetchData(startDateUTC, endDateUTC, timeInterval),
-                // 只有在需要对比且对比时间有效时才获取对比发帖量
-                (compareOffset > 0 && startCompareUTC && endCompareUTC)
-                    ? fetchData(startCompareUTC, endCompareUTC, timeInterval)
+                fetchData(startDateUTC, endDateUTC, timeInterval, selectedIndicator), // 传递 selectedIndicator 给 fetchData
+                // 只有在需要对比且对比时间有效 **且没有选择指标** 时才获取对比发帖量
+                (compareOffset > 0 && startCompareUTC && endCompareUTC && !selectedIndicator)
+                    ? fetchData(startCompareUTC, endCompareUTC, timeInterval, null) // 对比数据不需要指标
                     : Promise.resolve(null) // 返回 null 表示没有对比发帖量
             ]).then(([currentData, compareData]) => {
                 // --- 数据处理和图表更新 ---
@@ -318,18 +346,32 @@
                     throw new Error("主数据格式无效");
                 }
 
-                // 主数据
+                // 数据集数组
+                const datasets = [];
+
+                // 主数据 - 发帖量
                 const labels = currentData.map(item => fromUTC(item.timestamp));
-                const datasets = [
-                    {
-                        label: '当前发帖量',
-                        data: currentData.map(item => item.value),
-                        borderColor: 'rgb(75, 192, 192)',
+                datasets.push({
+                    label: '当前发帖量',
+                    data: currentData.map(item => item.value),
+                    borderColor: 'rgb(75, 192, 192)',
+                    tension: 0.1,
+                    pointRadius: 1, // Smaller points for dense data
+                    pointHoverRadius: 5
+                });
+
+                // 技术指标数据
+                if (selectedIndicator && currentData[0] && selectedIndicator in currentData[0]) {
+                    datasets.push({
+                        label: selectedIndicator.toUpperCase(), // 指标名称作为 label
+                        data: currentData.map(item => item[selectedIndicator]), // 从数据中获取指标值
+                        borderColor: 'rgb(255, 159, 64)', // 指标线条颜色
                         tension: 0.1,
-                        pointRadius: 1, // Smaller points for dense data
+                        pointRadius: 1,
                         pointHoverRadius: 5
-                    }
-                ];
+                    });
+                }
+
 
                 // 对比发帖量 (只有在成功获取后才添加)
                 if (compareData && Array.isArray(compareData) && compareData.length > 0) {
@@ -356,7 +398,7 @@
                             tension: 0.1
                         });
                     }
-                } else if (compareOffset > 0 && !compareData) {
+                } else if (compareOffset > 0 && !compareData && !selectedIndicator) { // 只有在请求对比且失败 **且没有选择指标** 时显示提示
                     console.warn("请求了对比发帖量，但未能获取或数据为空。");
                     datasets.push({
                         label: `对比发帖量 (${compareOffset}${compareUnit === 'days' ? '天' : '小时'}前) - 获取失败`,
@@ -409,5 +451,6 @@
         fetchDataButton.click(); // 触发初始查询
     });
 </script>
+
 </body>
 </html>
