--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <option value="">环比</option>
                     <option value="ma5">MA5</option>
                     <option value="ma10">MA10</option>
-                    <!--                    <option value="boll">BOLL</option>-->
+                    <option value="boll">BOLL</option>
                     <!--                    <option value="macd">MACD</option>-->
                 </select>
             </div>
@@ -62,6 +62,8 @@
                     <option value="3d">最近3天</option>
                     <option value="5d">最近5天</option>
                     <option value="7d">最近7天</option>
+                    <option value="14d">最近14天</option>
+                    <option value="30d">最近30天</option>
                 </select>
             </div>
             <div>
@@ -84,8 +86,9 @@
                     <option value="5m">5 分钟</option>
                     <option value="15m">15 分钟</option>
                     <option value="30m">30 分钟</option>
-                    <option value="60m">1 小时</option>
-                    <option value="120m">2 小时</option>
+                    <option value="1h">1 小时</option>
+                    <option value="4h">4 小时</option>
+                    <option value="12h">12 小时</option>
                     <option value="24h">1 天</option>
                     <option value="168h">7 天</option>
                 </select>
@@ -245,33 +248,62 @@
 
         function setDateRange(range) {
             const now = moment();
-            let start;
-            switch (range) {
-                case '2h':
-                    start = moment().subtract(2, 'hours');
-                    break;
-                case '8h':
-                    start = moment().subtract(8, 'hours');
-                    break;
-                case '24h':
-                    start = moment().subtract(24, 'hours');
-                    break;
-                case '3d':
-                    start = moment().subtract(3, 'days');
-                    break;
-                case '5d':
-                    start = moment().subtract(5, 'days');
-                    break;
-                case '7d':
-                    start = moment().subtract(7, 'days');
-                    break;
-                default: // 如果有自定义或其他情况，不清空输入框，让用户手动调整
-                    console.warn("未知的快速选择范围:", range);
-                    return;
+            const rangeOptions = {
+                '2h': {value: 2, unit: 'hours'},
+                '8h': {value: 8, unit: 'hours'},
+                '24h': {value: 24, unit: 'hours'},
+                '3d': {value: 3, unit: 'days'},
+                '5d': {value: 5, unit: 'days'},
+                '7d': {value: 7, unit: 'days'},
+                '14d': {value: 14, unit: 'days'},
+                '30d': {value: 30, unit: 'days'}
+            };
+            const option = rangeOptions[range];
+            if (!option) {
+                console.warn("未知的快速选择范围:", range);
+                return;
             }
+            const start = moment().subtract(option.value, option.unit);
+
             // 使用 moment().local() 确保输入框显示的是本地时间
             startDateInput.value = start.local().format('YYYY-MM-DDTHH:mm');
             endDateInput.value = now.local().format('YYYY-MM-DDTHH:mm');
+        }
+
+        function pushBoll(datasets, currentData, selectedIndicator) {
+            datasets.push(
+                {
+                    label: 'UPPER',
+                    data: currentData.map(item => item['boll']['upper']),
+                    borderColor: 'rgba(234,222,119,0.75)',
+                    borderWidth: 1,
+                    tension: 0.1,
+                    pointRadius: 1,
+                    pointHoverRadius: 5
+                }
+            )
+            datasets.push(
+                {
+                    label: 'LOWER',
+                    data: currentData.map(item => item['boll']['lower']),
+                    borderColor: 'rgba(217,141,234,0.75)',
+                    borderWidth: 1,
+                    tension: 0.1,
+                    pointRadius: 1,
+                    pointHoverRadius: 5
+                }
+            )
+            datasets.push(
+                {
+                    label: 'BOLL',
+                    data: currentData.map(item => item['boll']['middle']),
+                    borderColor: 'rgba(198,214,212,0.59)',
+                    borderWidth: 1,
+                    tension: 0.1,
+                    pointRadius: 1,
+                    pointHoverRadius: 5
+                }
+            )
         }
 
         // --- 事件监听器：快速选择变化 ---
@@ -362,14 +394,19 @@
 
                 // 技术指标数据
                 if (selectedIndicator && currentData[0] && selectedIndicator in currentData[0]) {
-                    datasets.push({
-                        label: selectedIndicator.toUpperCase(), // 指标名称作为 label
-                        data: currentData.map(item => item[selectedIndicator]), // 从数据中获取指标值
-                        borderColor: 'rgb(255, 159, 64)', // 指标线条颜色
-                        tension: 0.1,
-                        pointRadius: 1,
-                        pointHoverRadius: 5
-                    });
+                    // boll 有多根，单独处理
+                    if (selectedIndicator === 'boll') {
+                        pushBoll(datasets, currentData, selectedIndicator);
+                    } else {
+                        datasets.push({
+                            label: selectedIndicator.toUpperCase(), // 指标名称作为 label
+                            data: currentData.map(item => item[selectedIndicator]), // 从数据中获取指标值
+                            borderColor: 'rgb(255, 159, 64)', // 指标线条颜色
+                            tension: 0.1,
+                            pointRadius: 1,
+                            pointHoverRadius: 5
+                        });
+                    }
                 }
 
 
