feat: 添加 tailwindcss 本地编译配置
在项目中引入 tailwindcss 本地编译配置，替换原有的 CDN 引用方式，以提高样式加载性能和开发灵活性。新增了 `tailwind.config.js` 和 `output.css` 文件，并更新了 `index.html` 中的样式引用方式。

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>大时代景气指数</title>
     <!-- CDN 资源 -->
-    <script src="https://cdn.tailwindcss.com" data-cfasync="false"></script>
+    <!-- <script src="https://cdn.tailwindcss.com" data-cfasync="false"></script> -->
+    <link href="./output.css" rel="stylesheet">
     <script data-cfasync="false">
         tailwind.config = {
             darkMode: 'class',
