--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="light dark">
     <title>大时代景气指数</title>
     <!-- CDN 资源 -->
     <!-- <script src="https://cdn.tailwindcss.com" data-cfasync="false"></script> -->
