--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <script src="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/Chart.js/3.7.1/chart.min.js"></script>
     <script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/moment.js/2.29.1/moment.min.js"></script>
     <script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/moment-timezone/0.5.34/moment-timezone.min.js"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8M3SQNFGV5"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KK477STN21"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-        gtag('config', 'G-8M3SQNFGV5');
+        gtag('config', 'G-KK477STN21');
     </script>
 
     <!-- 加载主应用脚本 -->
