--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </script>
 
     <!-- 加载主应用脚本 -->
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="dist/bundle.js"></script>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100">
     <div class="container mx-auto p-4">
