--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             darkMode: 'class',
         }
     </script>
-    <script src="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/Chart.js/3.7.1/chart.min.js"></script>
-    <script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/moment.js/2.29.1/moment.min.js"></script>
-    <script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/moment-timezone/0.5.34/moment-timezone.min.js"></script>
+    <script src="https://cdnjs.snrat.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
+    <script src="https://cdnjs.snrat.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <script src="https://cdnjs.snrat.com/ajax/libs/moment-timezone/0.5.34/moment-timezone.min.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KK477STN21"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
