--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                         <option value="7d">最近7天</option>
                         <option value="14d">最近14天</option>
                         <option value="30d">最近30天</option>
+                        <option value="60d">最近60天</option>
                     </select>
                 </div>
 
@@ -102,6 +103,7 @@
                         <option value="12h">12 小时</option>
                         <option value="24h">1 天</option>
                         <option value="168h">7 天</option>
+                        <option value="336h">14 天</option>
                     </select>
                 </div>
 
